--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
         <div class="span9 columns">
           <h2>Details</h2>
-          <p>Mettre du blabla sur choopy, why not le lien vers les tests, etc.</p>
+          <p>This part will be filled once Choopy will be more stable. In the mean while you can <a href="test/index.html">check the tests</a>.</p>
           
           <h3>Primitives</h3>
           <h4>.parse()</h4>
