--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <header class="jumbotron subhead" id="overview">
         <h1>Boomgraph</h1>
         <p class="lead">A chart library based on <a href="http://raphaeljs.com/" target="_blank">Raphael</a>.
+        <p class="lead">Boomgraph on <a href="http://github.com/retentio/Boomgraph/" target="_blank">Github</a>.
         <div class="subnav">
           <ul class="nav nav-pills">
             <li><a href="#concept">Concept</a></li>
