Move boomgraph *.js files to src

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Le styles -->
     <link href="doc/css/bootstrap.css" rel="stylesheet">
     <link href="doc/css/responsive.css" rel="stylesheet">
-    <link href="vendor/docs.css" rel="stylesheet">
+    <link href="doc/css/docs.css" rel="stylesheet">
     <link href="doc/google-code-prettify/prettify.css" rel="stylesheet">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
