--- a/index.html
+++ b/index.html
@@ -614,13 +614,13 @@ mySparkbar = new Sparkbar(options);
     
     <script src="doc/js/doc.js"></script>
     <script src="vendor/Raphael.js"></script>
-    <script src="Choopy.js"></script>
-    <script src="Line.js"></script>
+    <script src="Boomgraph.min.js"></script>
+<!--    <script src="Line.js"></script>
     <script src="Area.js"></script>
     <script src="Bar.js"></script>
     <script src="Sparkline.js"></script>
     <script src="Sparkarea.js"></script>
-    <script src="Sparkbar.js"></script>
+    <script src="Sparkbar.js"></script>-->
    
   </body>
 </html>
