--- a/test/index.html
+++ b/test/index.html
@@ -7,7 +7,7 @@
         <script type="text/javascript" src="http://code.jquery.com/qunit/qunit-git.js"></script>  
         <!--         Your project file goes here  -->
         <script type="text/javascript" src="../vendor/Raphael.js"></script>
-        <script type="text/javascript" src="../Choopy.js"></script>  
+        <script type="text/javascript" src="../src/Choopy.js"></script>  
         <!--             Your tests file goes here   -->
         <script type="text/javascript" src="unit/Choopy.js"></script> 
 
