--- a/index.html
+++ b/index.html
@@ -627,7 +627,10 @@ coord:{
                     data:[{name:'mySerie',data:[1,2,0,1,3,4,5,6,5,4,8,5,4,8,5]}],
                     container:'boomgraph-container-sparkbar',
                     width:200,
-                    height:50
+                    height:50,
+                    color :{
+                        serie:['#CC33CC']
+                    }
                 }
                 new Sparkbar(options)
             
@@ -635,7 +638,10 @@ coord:{
                     data:[{name:'mySerie',data:[1,2,0,1,3,4,5,6,5,4,8,5,4,8,5]}],
                     container:'boomgraph-container-sparkarea',
                     width:200,
-                    height:50
+                    height:50,
+                    color :{
+                        serie:['#A2CC06']
+                    }
                 }
                 new Sparkarea(options)
             }
