--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ Choopy.prototype.defaultOptions={
                 <div class="row">
                     <div class="span3 columns">
                         <p>Create a line chart with one or more series of data.</p>
-                        <a href="Line.js" target="_blank" class="btn">Download file</a>
+                        <a href="https://raw.github.com/Retentio/Boomgraph/master/src/Line.js" target="_blank" class="btn">Download file</a>
                     </div>
                     <div class="span9 columns">
                         <h2>Example</h2>
@@ -273,7 +273,7 @@ myLineChart = new Line(options);
                 <div class="row">
                     <div class="span3 columns">
                         <p>Create an area chart with one or more series of data.</p>
-                        <a href="Area.js" target="_blank" class="btn">Download file</a>
+                        <a href="https://raw.github.com/Retentio/Boomgraph/master/src/Area.js" target="_blank" class="btn">Download file</a>
                     </div>
                     <div class="span9 columns">
                         <h2>Example</h2>
@@ -308,7 +308,7 @@ myAreaChart = new Area(options);
                 <div class="row">
                     <div class="span3 columns">
                         <p>Create a vertical bar chart with one or more series of data.</p>
-                        <a href="Area.js" target="_blank" class="btn">Download file</a>
+                        <a href="https://raw.github.com/Retentio/Boomgraph/master/src/Bar.js" target="_blank" class="btn">Download file</a>
                     </div>
                     <div class="span9 columns">
                         <h2>Example</h2>
@@ -342,7 +342,7 @@ myBarChart = new Bar(options);
                 <div class="row">
                     <div class="span3 columns">
                         <p>Create a sparkline with one serie.</p>
-                        <a href="Sparkline.js" target="_blank" class="btn">Download file</a>
+                        <a href="https://raw.github.com/Retentio/Boomgraph/master/src/Sparkline.js" target="_blank" class="btn">Download file</a>
                     </div>
                     <div class="span9 columns">
                         <h2>Example</h2>
@@ -378,7 +378,7 @@ mySparkline = new Sparkline(options);
                 <div class="row">
                     <div class="span3 columns">
                         <p>Create a sparkarea with one serie.</p>
-                        <a href="Sparkarea.js" target="_blank" class="btn">Download file</a>
+                        <a href="https://raw.github.com/Retentio/Boomgraph/master/src/Sparkarea.js" target="_blank" class="btn">Download file</a>
                     </div>
                     <div class="span9 columns">
                         <h2>Example</h2>
@@ -414,7 +414,7 @@ mySparkarea = new Sparkarea(options);
                 <div class="row">
                     <div class="span3 columns">
                         <p>Create a sparkbar with one serie.</p>
-                        <a href="Sparkline.js" target="_blank" class="btn">Download file</a>
+                        <a href="https://raw.github.com/Retentio/Boomgraph/master/src/Sparkbar.js" target="_blank" class="btn">Download file</a>
                     </div>
                     <div class="span9 columns">
                         <h2>Example</h2>
@@ -451,7 +451,7 @@ mySparkbar = new Sparkbar(options);
                     <div class="span3 columns">
                         <h3>About Choopy</h3>
                         <p>The core object behind all Boomgraph charts.</p>
-                        <a href="Choopy.js" target="_blank" class="btn">Download file</a>
+                        <a href="https://raw.github.com/Retentio/Boomgraph/master/src/Choopy.js" target="_blank" class="btn">Download file</a>
                     </div>
                     <div class="span9 columns">
                         <h2>Details</h2>
