--- a/index.html
+++ b/index.html
@@ -651,6 +651,7 @@ coord:{
                             x:true
                         }
                     }
+                }
                     new Line(options);
                     options={
                         data:'fixture',
@@ -660,7 +661,8 @@ coord:{
                             right:0
                         },
                         legend:{
-                            display:'right'}
+                            display:'right'
+                        }
                     }
                     new Area(options);
                     options={
@@ -676,7 +678,8 @@ coord:{
                             }
                         },
                         legend:{
-                            display:null}
+                            display:null
+                        }
                     }
                     new Bar(options);
             
